Fixed spacing in signup sheet, box now stretches browser width.

--- a/style.css
+++ b/style.css
@@ -1,31 +1,39 @@
 body{
     margin: 0px;
     display:flex;
+    background: rgb(238, 254, 250);
 }
 img{
     width:500px;
     height: 100vh
 }
 .signupside{
-    display:flex;
+    margin:0;
     font-size:14px;
-    flex-direction: column;
-    justify-content: center;
-    
-    background: rgb(238, 236, 236);
+    min-width: 100%;
     
 }
 #know{
     font-style: italic;
 }
 #signupsheet{
+
     background-color: white;
     box-shadow: 0 4px 8px gray;
     
+    
+    
+}
+
+#calltoaction{
+    max-width: 750px;
+    margin-top:120px;
 }
 .signup{
     padding-left:24px;
     padding-right: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 form{
     display:flex;
